# tachikoma

./: .gitignore  LICENSE  README.md  action.yml  package.json
.github/workflows/: main.yml
cargo/snk-grid/: Cargo.toml
cargo/snk-grid/src/: direction.rs  grid.rs  grid_ascii.rs  grid_samples.rs  lib.rs  point.rs  snake.rs
cargo/snk-js/: Cargo.toml
cargo/snk-js/src/: lib.rs
cargo/snk-solver/: Cargo.toml
cargo/snk-solver/src/: cave.rs  cost_to_outside.rs  lib.rs  reach_outside.rs  solver.rs
svg-only/: README.md  action.yml
